Expand domains table and add websocket payload
