# backend/api/src/main/java/com/getinstantdomains/api/service/domain/DomainServiceImpl.java
@@ -1,13 +1,19 @@
 package com.getinstantdomains.api.service.domain;
 
+import com.getinstantdomains.api.DomainName;
 import com.getinstantdomains.api.GenerateRequest;
 import com.getinstantdomains.api.TaskId;
+import com.getinstantdomains.api.WebsocketPayload;
+import com.getinstantdomains.api.data.postgres.repo.DomainsRepo;
 import com.getinstantdomains.api.props.OpenAiProps;
+import com.getinstantdomains.api.props.WebSocketProps;
 import com.getinstantdomains.api.service.gpt.GptService;
 import com.getinstantdomains.api.service.utils.IDUtils;
+import java.time.Instant;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ObjectUtils;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 
 /**
@@ -19,6 +25,9 @@ import org.springframework.stereotype.Service;
 public class DomainServiceImpl implements DomainService {
   private final GptService gptService;
   private final OpenAiProps openAiProps;
+  private final DomainsRepo domainsRepo;
+  private final WebSocketProps webSocketProps;
+  private final SimpMessagingTemplate messagingTemplate;
 
   @Override
   public TaskId generateDomains(GenerateRequest generateRequest) {
@@ -28,9 +37,22 @@ public class DomainServiceImpl implements DomainService {
       gptService.gptCompletion(
           generateRequest.getClientId(),
           openAiProps.getDomainGeneratePrompt(),
-          generateRequest.getQuery());
+          generateRequest.getQuery(), this);
       return new TaskId().taskId(taskId);
     }
     return new TaskId();
+  }
+
+  @Override
+  public void performWhois(String domain, String clientId) {
+    System.out.printf("WHOIS: %s: %s: %s\n", Instant.now().getEpochSecond(), clientId, domain);
+    WebsocketPayload payload = new WebsocketPayload()
+        .type(DomainName.class.getSimpleName())
+        .data(new DomainName().name(domain));
+//    messagingTemplate.convertAndSendToUser(
+//        clientId,
+//        webSocketProps.getQueue(),
+//        payload
+//    );
   }
 }
